{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 9,
  "lineage": "f8ef7e19-e447-d82d-9eaa-3559ee09c97b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/networkInterfaces/terraform-introduction-network-interface",
            "internal_domain_name_suffix": "jl5mlbw5pkourcxvqxwxzbi2wf.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/publicIPAddresses/main-public-ip",
                "subnet_id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/virtualNetworks/terraform-introduction-network/subnets/terraform-introduction-subnet"
              }
            ],
            "location": "northeurope",
            "name": "terraform-introduction-network-interface",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "terraform-introduction-resources"
          },
          "dependencies": [
            "azurerm_public_ip.static-public-ip-example",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "location": "northeurope",
            "name": "example-nsg",
            "resource_group_name": "terraform-introduction-resources",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "example-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "terraform-introduction-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example_nsg",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "static-public-ip-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/publicIPAddresses/main-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.74.124.103",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "main-public-ip",
            "resource_group_name": "terraform-introduction-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/virtualNetworks/terraform-introduction-network/subnets/terraform-introduction-subnet",
            "name": "terraform-introduction-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-introduction-resources",
            "virtual_network_name": "terraform-introduction-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "86c5fe4a-7adf-489d-8af5-85ed7c851cb5",
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/virtualNetworks/terraform-introduction-network",
            "location": "northeurope",
            "name": "terraform-introduction-network",
            "resource_group_name": "terraform-introduction-resources"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}